xrpl-wasm-stdlib/xrpl-macros/tests/currency/fail_xrp.stderr
error: Invalid currency: XRP
 --> tests/currency/fail_xrp.rs:5:15
  |
5 |     currency!("XRP");
  |               ^^^^^
